css/td.ui.css
:root {
    --space-between-signals: 12px;
    --background-color: #212121;
    --text-color: lightgray;
    --gutter-color: black;
}

.td {
    position: relative;
    display: inline-flex;
    flex-direction: row;
    width: 100%;
    height: 100%;
    min-height: 160px;
    background-color: var(--background-color);
    color: var(--text-color);
}

.td > .gutter {
    background-color: var(--gutter-color);
    background-repeat: no-repeat;
    background-position: 50%;
}

.td > .gutter.gutter-horizontal {
    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
    cursor: col-resize;
}

.td-signal_names {
    display: inline-flex;
    flex-direction: column;
    justify-content: space-evenly;
    height: 100%;
    text-align: right;
    font-size: calc(var(--cycle-height) * 0.67);
}

.td-signal_name {
    display: inline-block;
    text-align: right;
    margin: var(--space-between-signals);
}

.td-signal_name_outline {
    display: inline-flex;
    margin: var(--space-between-signals);
    height: var(--cycle-height);
    align-items: center;
    justify-content: right;
}

.td-signal_name_detail {
    display: flex;
    flex-direction: column;
}

.td-signal_quickviews {
    display: inline-flex;
    flex-direction: column;
    justify-content: space-evenly;
    height: 100%;
    text-align: right;
}

.td-signal_contents_wrapper {
    position: relative;
    overflow-x: scroll;
    overflow-y: none;
    user-select: none;
    outline: none;
}

.td-signal_contents_wrapper::-webkit-scrollbar {
    height: 10px;
}

.td-signal_contents_wrapper::-webkit-scrollbar-thumb {
    background-color: var(--text-color);
    border-radius: 10px;
    background-clip: padding-box;
    border: 2px solid transparent;
}

.td-signal_contents_wrapper::-webkit-scrollbar-thumb:hover {
    background-color: var(--text-color);
}

.td-signal_contents_wrapper::-webkit-scrollbar-thumb:active {
    background-color: var(--text-color);
}

.td-signal_contents_wrapper::-webkit-scrollbar-track {
    background-color: #454c5a;
}

.td-signal_contents {
    display: inline-flex;
    flex-direction: column;
    height: 100%;
}

.td-signal_content {
    display: inline-block;
    margin: var(--space-between-signals);
}

.td-signal_content_outline {
    display: inline-flex;
    margin: var(--space-between-signals);
    height: var(--cycle-height);
    align-items: center;
    justify-content: left;
}

.td-signal_content_detail {
    display: flex;
    flex-direction: column;
}

.td-cursor {
    width: 0;
    height: 100%;
    position: absolute;
    float: left;
    top: 0;
    border-left: 2px solid rgb(232, 232, 0);
    border-right: 2px solid rgb(232, 232, 0);
    border-radius: 1px;
}

